<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="#fff"
            card_view:cardCornerRadius="8dp"
            android:elevation="2dp">
            <ImageView
                android:id="@+id/posterImge"
                android:layout_width="132dp"
                android:layout_height="200dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/frozen"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleTextView"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/card_view"
                android:padding="4dp"
                android:textSize="24sp"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_toRightOf="@+id/card_view" />

            <TextView
                android:id="@+id/infoTextView"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTextView"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/card_view"
                android:padding="4dp"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/info"
                android:layout_toRightOf="@+id/card_view"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/ratingTextView"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoTextView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/starImge"
                android:padding="4dp"
                android:text="@string/rating"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:layout_toRightOf="@+id/starImge"
                android:layout_alignParentRight="true" />

            <ImageView
                android:id="@+id/starImge"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/infoTextView"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/card_view"
                card_view:srcCompat="@drawable/ic_star"
                android:layout_toRightOf="@+id/card_view"
                tools:ignore="VectorDrawableCompat" />
        </RelativeLayout>


</LinearLayout>