<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282C42"
    tools:context=".MovieDetail">

    <ImageView
        android:id="@+id/posterImge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/frozen"
        android:scaleType="fitStart"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#83000000" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        app:cardCornerRadius="32dp"
        app:cardBackgroundColor="#282C42"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/posterImge" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_toStartOf="@+id/ratingTextView"
                android:padding="8dp"
                android:text="@string/title"
                android:textColor="@color/colorWhite"
                android:textSize="34sp"
                android:layout_toLeftOf="@+id/ratingTextView" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_toStartOf="@+id/imageView3"
                android:padding="8dp"
                android:text="@string/rating"
                android:textSize="24sp"
                android:textColor="@color/colorWhite"
                android:layout_toLeftOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginRight="56dp"
                app:srcCompat="@drawable/ic_star"
                tools:ignore="VectorDrawableCompat"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:text="@string/description"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>